--- a/app/src/main/res/layout/activity_cadastrar_contato.xml
+++ b/app/src/main/res/layout/activity_cadastrar_contato.xml
@@ -12,7 +12,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CadastrarContato"
+    tools:context=".AtualizarUsuario"
     android:orientation="vertical"
     android:background="@color/dark_gray">
 
